fix(cfx-ui): home page overflow

--- a/ext/cfx-ui/src/app/home/home.component.scss
+++ b/ext/cfx-ui/src/app/home/home.component.scss
@@ -6,7 +6,6 @@
 	};
 
 	@include appContent;
-	overflow: visible;
 }
 
 .home {
